--- a/CobaltCoreArchipelago.csproj
+++ b/CobaltCoreArchipelago.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<RootNamespace>DemoMod</RootNamespace>
-		<Version>0.2.0</Version>
+		<RootNamespace>CobaltCoreArchipelago</RootNamespace>
+		<Version>0.1.0</Version>
 		<IncludedModProjectPaths>i18n;assets</IncludedModProjectPaths>
 
 		<TargetFramework>net8.0</TargetFramework>
