--- a/CobaltCoreArchipelago.csproj
+++ b/CobaltCoreArchipelago.csproj
@@ -16,6 +16,8 @@
 		-->
 	</PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.0.0" />
+		<PackageReference Include="Archipelago.MultiClient.Net" Version="6.7.0" />
 		<PackageReference Include="Nickel.ModBuildConfig" Version="2.0.2" />
 		<PackageReference Include="EnumByNameSourceGenerator" Version="1.1.2" PrivateAssets="all" ExcludeAssets="runtime">
 		  <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
